--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -38,6 +38,6 @@
         </tr>
       </tbody>
     </table>
-    <paginator-nav></paginator-nav>
+    <paginator-nav *ngIf="paginador" [paginador] = "paginador"></paginator-nav>
   </div>
 </div>
